# gammaflow

./: .gitignore  MANIFEST.in  README.md  publish_to_pypi.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: advanced_usage.py  basic_usage.py  list_mode_example.py  listmode_class_example.py  reintegrate_example.py  roi_example.py  timing_inference_example.py  visualization_example.py
gammaflow/: __init__.py
gammaflow/algorithms/: __init__.py
gammaflow/core/: __init__.py  calibration.py  listmode.py  spectra.py  spectrum.py  time_series.py
gammaflow/datasets/: __init__.py  radai.py
gammaflow/operations/: __init__.py  roi.py
gammaflow/simulation/: __init__.py  gain.py  temperature.py
gammaflow/utils/: __init__.py  exceptions.py
gammaflow/visualization/: __init__.py  plotting.py
tests/: README.md  __init__.py  conftest.py  test_basic.py  test_calibration.py  test_integration.py  test_list_mode.py  test_listmode_class.py  test_optional_live_time.py  test_rebinning_conservation.py  test_reintegrate.py  test_roi.py  test_scalar_times.py  test_simulation_gain.py  test_spectra.py  test_spectrum.py  test_time_series.py
